Bumped version. Added footer link. Fixed header mobile clicking overlap issue.

--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -14,8 +14,20 @@
   @include flexChild;
 }
 
-.link {
+.linkA {
   color: $color5;
+
+  &:hover {
+    color: darken($color5, 5%);
+  }
+}
+
+.linkB {
+  color: $color2;
+
+  &:hover {
+    color: darken($color2, 5%);
+  }
 }
 
 .version {
