--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -30,6 +30,7 @@ $itemOrderMobile: (nav: 10, background: 15, logo: 20, hamburger: 20);
 
   @include breakpoint(mobile) {
     background-color: transparent;
+    height: auto;
   }
 }
 
